<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2011 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<!-- A set of preferences used to exercise the DevicePolicyManager API. -->
<!-- This screen is shown for the "Lock / Wipe" header. -->
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory
        android:key="key_category_lock_wipe"
        android:title="@string/lock_wipe_category" >

        <EditTextPreference
            android:key="key_max_time_screen_lock"
            android:title="@string/maximum_lock_time"
            android:dialogTitle="@string/maximum_lock_time"
            android:inputType="number" />
        <EditTextPreference
            android:key="key_max_fails_before_wipe"
            android:title="@string/maximum_password_fails"
            android:dialogTitle="@string/maximum_password_fails"
            android:inputType="number" />
        <PreferenceScreen
            android:key="key_lock_screen"
            android:title="@string/lock_screen" />
        <PreferenceScreen
            android:key="key_wipe_data"
            android:title="@string/wipe_data"
            android:summary="@string/wipe_data_summary" />
        <PreferenceScreen
            android:key="key_wipe_data_all"
            android:title="@string/wipe_all_data"
            android:summary="@string/wipe_all_data_summary" />

    </PreferenceCategory>

</PreferenceScreen>
