<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2007 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
  
          http://www.apache.org/licenses/LICENSE-2.0
  
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TableLayout
        android:id="@+id/menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="1"
        android:collapseColumns="2">

        <TableRow>
            <TextView
                android:layout_column="1"
                android:text="@string/table_layout_7_open"
                android:padding="3dip" />
            <TextView
                android:text="@string/table_layout_7_open_shortcut"
                android:gravity="right"
                android:padding="3dip" />
        </TableRow>

        <TableRow>
            <TextView
                android:layout_column="1"
                android:text="@string/table_layout_7_save"
                android:padding="3dip" />
            <TextView
                android:text="@string/table_layout_7_save_shortcut"
                android:gravity="right"
                android:padding="3dip" />
        </TableRow>

        <TableRow>
            <TextView
                android:layout_column="1"
                android:text="@string/table_layout_7_save_as"
                android:padding="3dip" />
            <TextView
                android:text="@string/table_layout_7_save_as_shortcut"
                android:gravity="right"
                android:padding="3dip" />
        </TableRow>

        <View
            android:layout_height="2dip"
            android:background="#FF909090" />

        <TableRow>
            <TextView
                android:text="@string/table_layout_7_x"
                android:padding="3dip" />
            <TextView
                android:text="@string/table_layout_7_import"
                android:padding="3dip" />
        </TableRow>

        <TableRow>
            <TextView
                android:text="@string/table_layout_7_x"
                android:padding="3dip" />
            <TextView
                android:text="@string/table_layout_7_export"
                android:padding="3dip" />
            <TextView
                android:text="@string/table_layout_7_export_shortcut"
                android:gravity="right"
                android:padding="3dip" />
        </TableRow>

        <View
            android:layout_height="2dip"
            android:background="#FF909090" />
    </TableLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/toggle2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/table_layout_7_toggle_checkmarks" />
        <Button
            android:id="@+id/toggle1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/table_layout_7_toggle_shortcuts" />
    </LinearLayout>
</LinearLayout>
